WebCore/platform/chromium/FileSystemChromiumLinux.cpp
@@ -38,4 +38,9 @@ String pathGetFileName(const String& path)
     return path.substring(path.reverseFind('/') + 1);
 }
 
+String pathGetDisplayFileName(const String& path)
+{
+    return pathGetFileName(path);
+}
+
 } // namespace WebCore
