WebCore/platform/chromium/FileSystemChromiumWin.cpp
@@ -41,4 +41,9 @@ String pathGetFileName(const String& path)
     return String(PathFindFileName(String(path).charactersWithNullTermination()));
 }
 
+String pathGetDisplayFileName(const String& path)
+{
+    return pathGetFileName(path);
+}
+
 } // namespace WebCore
